Updating the Responsive on Mobile on Client Side and fixed logic code

--- a/ADT313-movieproject/admin-dashboard-neilraphael-ramos-bsit3a/src/components/movieCards/MovieCards.css
+++ b/ADT313-movieproject/admin-dashboard-neilraphael-ramos-bsit3a/src/components/movieCards/MovieCards.css
@@ -15,11 +15,12 @@
 
 @media (max-width: 500px) {
   .card-movie img {
-    max-width: 138px;
+    max-width: 118px;
   }
 
   .card-movie {
-    max-width: 138px;
+    max-width: 118px;
+    font-size: 8pt;
   }
 }
 
