--- a/ADT313-movieproject/admin-dashboard-neilraphael-ramos-bsit3a/src/pages/Client/Client.css
+++ b/ADT313-movieproject/admin-dashboard-neilraphael-ramos-bsit3a/src/pages/Client/Client.css
@@ -15,7 +15,7 @@ body {
     display: grid;
     grid-template-areas:
         "head head"
-        "main side"
+        "main main"
         "foot foot";
     grid-template-rows: 70px auto 90px;
     overflow: hidden;
@@ -40,12 +40,40 @@ article {
     position: relative;
 }
 
-aside {
-    grid-area: side;
+.sidebar {
+    position: absolute;
     background-color: #45525f;
     padding: 10px;
+    width: 185px;
+    top: 0;
+    bottom: 0;
+    right: 0;
     transition: transform 0.5s ease;
     transform: translateX(100%);
+}
+
+.close-sidebar {
+    background-color: #2f3841;
+    color: white;
+    border: none;
+    width: 25px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.close-sidebar:hover {
+    background-color: #232b34;
+}
+
+.cover-sidebar{
+    position: absolute;
+    background-color: rgba(63, 63, 63, 0.6);
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
 }
 
 footer {
@@ -131,10 +159,26 @@ footer {
         font-size: 9pt;
     }
     .name-user {
-        font-size: 15pt;
+        font-size: 11pt;
     }
     .role-user {
         font-size: 10pt;
+    }
+    .photo-user-img {
+        width: 80px;
+        height: 80px;
+    }
+    .sidebar {
+        width: 160px;
+    }
+    .nav-user .logout-user {
+        width: 160px !important;
+    }
+    .nav-user .Movies-user {
+        width: 160px !important;
+    }
+    .space-from-name-nav {
+        margin-top: -10px;
     }
 }
 
@@ -161,7 +205,11 @@ footer {
 }
 
 .role-user {
-    margin-top: -15px;
+    margin-top: -10px;
+}
+
+.name-user {
+    font-size: 15pt;
 }
 
 .container-user-info {
